--- a/indexchat.html
+++ b/indexchat.html
@@ -11,17 +11,14 @@
 </head>
 <body>
     <div class="topBar">
-        <div class="topBarImg"> 
-            <img src="assets/sasuke.jpg" alt="Description of image">
-        </div>
+        <div></div>
         4thWall
     </div>
 
     <div class="nameInfo">
+        <img class = "topBarImg" src="assets/sasuke_blind.png" alt="Description of image">
         <p class="name">Sasuke Uchiha</p>
         <button class="infoBtn" id="info-btn" onclick="popUp();"><i class="fas fa-bars"></i></button>
-
-
     </div>
 
     <div class="chatContainer" id="chatContainer">
